Creacion de rutas y de nav

--- a/src/app/lnunez/lnunez.component.html
+++ b/src/app/lnunez/lnunez.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="container">
     <div class="contName">
       <p class="textName">Leonardo Sotero Nuñez Ortiz</p>
     </div>
@@ -11,4 +11,4 @@
     <div class="contImg">
       <img src="https://i.pinimg.com/736x/13/16/c6/1316c631f23bc01d9b3b37e917edd9a8.jpg"  width="300" />
     </div>
-  </body>
+  </div>
