--- a/src/app/lnunez/lnunez.component.css
+++ b/src/app/lnunez/lnunez.component.css
@@ -1,10 +1,15 @@
-body{
+
+:host {
+  display: block;
+}
+.container{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color:#1e2939 ;
-    
+    min-height: 100%;
 }
 
 p{
