--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-<div class="min-h-screen p-10 bg-gray-700">
-  <div class="text-center">
-    <img src="../../../public/assets/icon.png" alt="" />
-  </div>
+<div class="min-h-screen flex items-center justify-center bg-gray-700">
+  <img
+    src="assets/icono.svg"
+    alt="Logo"
+    class="h-[80vh] object-contain"
+  />
 </div>
