--- a/src/components/shared/navbar/navbar.html
+++ b/src/components/shared/navbar/navbar.html
@@ -17,6 +17,9 @@
         <a routerLink="/jsantiago" class="text-gray-700 hover:text-blue-600"
           >Santiago</a
         >
+        <a routerLink="/miguel" class="text-gray-700 hover:text-blue-600"
+          >Miguel</a
+        >
         <a
           routerLink="/lnunez"
           class="block px-4 py-2 text-gray-700 hover:bg-gray-100"
