Listo para merge

--- a/src/app/jsantiago/jsantiago.component.html
+++ b/src/app/jsantiago/jsantiago.component.html
@@ -5,6 +5,8 @@
     <li><a href="#">Servicios</a></li>
     <li><a href="#">Contacto</a></li>
     <li><a href='#'>Yahir</a></li>
+     <li><a href='#'>Ximena</a></li>
+      <li><a href='#'>Alberto</a></li>
   </ul>
 </nav>
 
