--- a/src/components/shared/navbar/navbar.html
+++ b/src/components/shared/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="bg-gray-700 shadow-lg border-b-4 border-yellow-400">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-20">
-      
+
       <!-- Logo -->
       <div class="flex items-center space-x-3">
         <img src="assets/icon.png" alt="Logo Los 6tásticos" class="h-12 w-12 rounded-full border-2 border-yellow-400">
@@ -31,6 +31,11 @@
           routerLink="/lnunez"
           class="text-white font-semibold hover:text-yellow-400 transition duration-300"
           >Leonardo
+        </a>
+        <a
+          routerLink="/alberto"
+          class="text-white font-semibold hover:text-yellow-400 transition duration-300"
+          >Alberto
         </a>
       </div>
       <!-- Botón móvil -->
